; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_urtw.c_urtw_set_macaddr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_urtw.c_urtw_set_macaddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.urtw_softc = type { i32 }

@URTW_MAC0 = common dso_local global i32 0, align 4
@URTW_MAC4 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.urtw_softc*, i32*)* @urtw_set_macaddr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @urtw_set_macaddr(%struct.urtw_softc* %0, i32* %1) #0 {
  %3 = alloca %struct.urtw_softc*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.urtw_softc* %0, %struct.urtw_softc** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.urtw_softc*, %struct.urtw_softc** %3, align 8
  %7 = load i32, i32* @URTW_MAC0, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @urtw_write32_m(%struct.urtw_softc* %6, i32 %7, i32 %10)
  %12 = load %struct.urtw_softc*, %struct.urtw_softc** %3, align 8
  %13 = load i32, i32* @URTW_MAC4, align 4
  %14 = load i32*, i32** %4, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 1
  %16 = load i32, i32* %15, align 4
  %17 = and i32 %16, 65535
  %18 = call i32 @urtw_write16_m(%struct.urtw_softc* %12, i32 %13, i32 %17)
  br label %19

19:                                               ; preds = %2
  %20 = load i32, i32* %5, align 4
  ret i32 %20
}

declare dso_local i32 @urtw_write32_m(%struct.urtw_softc*, i32, i32) #1

declare dso_local i32 @urtw_write16_m(%struct.urtw_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
